# Galerina

./: .env.example  .gitattributes  .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  Dockerfile  Dockerfile.dockerignore  HISTORY.md  KNOWN-ISSUES.md  LICENSE  README.md  SECURITY.md  SETUP.md  SPORE.code-workspace  THIRD-PARTY-NOTICES.md  _tmp_probe.mjs  galerina-benchmark-success-plan.md  galerina.check.json  galerina.mjs  galerina.workspace.json  install-strong-benchmark.ps1  logicn.mjs  logicn.workspace.json  notes.txt  only after everthng else is done.md  package.json  version.json
.claude/: settings.json  settings.local.json
.codebase-memory/: artifact.json
docs/: AI_ACCELERATOR_TARGETS.md  ANTI_HALLUCINATION.md  API.md  API_RESPONSE_ERROR_HANDLING.md  APP_CRASH_HANDLING.md  ARCHITECTURE.md  CHANGELOG.md  CLI.md  COMPILED_APP_GIT.md  CONSISTENCY_GATES.md  CORE_FOUNDATION_ROADMAP.md  COVERAGE.md  CSRF_PROTECTION.md  DECISIONS.md  DEPLOYMENT.md  DEPLOYMENT_AUTOCONFIG.md  DESIGN.md  DOMAIN_DRIVEN_DESIGN.md  ELECTRICAL_INFRASTRUCTURE.md  ENTERPRISE.md  ENV_SECRETS.md  ERROR_HANDLING.md  FAST_RESPONSE_AND_KEEPALIVE.md  FINANCE_PACKAGES.md  GALERINA_CHARTER_STATEMENT.md  GALERINA_FINANCIAL_MARKETS.md  LEARNING_MODE.md  (+42 more)
subprojects/dss-host/: .gitignore  Cargo.toml  README.md  deny.toml
subprojects/dss-host/src/: admission.rs  lib.rs  main.rs
subprojects/dss-host/tests/: attestation_reverify.rs  corpus_differential.rs  memory_zero_on_reset.rs  vdpm_differential.rs
subprojects/dss-host/tools/: export-corpus-differential.mjs  export-differential-fixture.mjs
(+4046 files in other folders)
